--- a/FlashCards/Client/wwwroot/css/app.css
+++ b/FlashCards/Client/wwwroot/css/app.css
@@ -45,7 +45,7 @@ html {
     font-size: 16px;
 }
 
-* {
+html * {
     box-sizing: border-box;
 }
 
@@ -107,6 +107,10 @@ body {
     width: 100%;
     margin: 0;
 }
+
+    #app * {
+        box-sizing: border-box;
+    }
 
 .loading-progress {
     position: relative;
